# Vanta

./: .gitignore  CHANGELOG.md  PKGBUILD  PLAN.md  README.md  extract-styles.mjs  hypr_clients.json  package-lock.json  package.json  refactor_settings.py  registry.json  vanta.desktop  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: layout-primitives.md
extensions/network-test/: manifest.json
extensions/password-gen/: manifest.json
extensions/process-manager/: manifest.json
extensions/smart-calculator/: manifest.json
extensions/sysinfo/: manifest.json
extensions/timer/: manifest.json
scripts/: check-visual-budgets.mjs  verify-release-packages.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config.json
src-tauri/resources/themes/: base.css  default.css  universal.css
src-tauri/src/: bundles.rs  clipboard.rs  community.rs  config.rs  doctor.rs  errors.rs  extensions.rs  files.rs  history.rs  launcher.rs  lib.rs  main.rs  matcher.rs  math.rs  permissions.rs  ranking_config.rs  scanner.rs  scripts.rs  secrets.rs  store.rs  themes.rs  window.rs  windows.rs  workflows.rs
src/lib/: ranking.ts  resultsListModel.d.ts  resultsListModel.js  theme.ts  types.ts
src/lib/components/: ActionConfirmModal.svelte  ClipboardView.svelte  CommunityHubWindow.svelte  ContextMenu.svelte  ContextualPanel.svelte  ErrorRecovery.svelte  ExtensionHost.svelte  ExtensionsHubWindow.svelte  FeatureHubWindow.svelte  FileIcon.svelte  FirstRunWizard.svelte  JobsPanel.svelte  KeyboardShortcutsModal.svelte  LauncherView.svelte  LoadingSkeleton.svelte  MacroPreview.svelte  NotificationCenter.svelte  NowPlayingBar.svelte  PermissionModal.svelte  PreviewPanel.svelte  QuickTipsPanel.svelte  ResultItem.svelte  ResultsList.svelte  ScriptResultItem.svelte  SearchExplainPanel.svelte  SearchInput.svelte  SectionHeader.svelte  SettingsView.svelte  SpotifyMiniPlayer.svelte  StatusBar.svelte  StoreView.svelte  ThemeStudioWindow.svelte  ToastContainer.svelte
src/lib/components/sdk/: ExtActionPanel.svelte  ExtDetail.svelte  ExtForm.svelte  ExtGrid.svelte  ExtList.svelte
src/lib/components/settings/: AccessibilitySettings.svelte  CommunitySettings.svelte  DiagnosticsSettings.svelte  FeatureHubSettings.svelte  FileSearchSettings.svelte  GeneralSettings.svelte  ThemeSettings.svelte
src/lib/sdk/: api.ts  loader.ts  types.ts
src/lib/stores/: toastStore.ts
src/routes/: +layout.svelte  +page.svelte
tests/: resultsListModel.test.mjs
vanta-extensions/: ratings.json  registry.json
vanta-extensions/extensions/clipboard-tools/: manifest.json
vanta-extensions/extensions/color-picker/: manifest.json
vanta-extensions/extensions/spotify/: manifest.json
vanta-extensions/extensions/weather/: manifest.json
