[package]
name = "vanta"
version = "1.1.1"
description = "Liquid Glass command palette for Linux"
authors = ["onxy"]
edition = "2021"

[lib]
name = "vanta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo-matcher = "0.3"
notify = "7"
tokio = { version = "1", features = ["full"] }
dirs = "5"
open = "5"
log = "0.4"
env_logger = "0.11"
freedesktop-icons = "0.4"
tauri-plugin-fs = "2.4.5"
