[package]
name = "vanta"
version = "1.8.0"
description = "Liquid Glass command palette for Linux"
authors = ["onxy"]
edition = "2021"

[lib]
name = "vanta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo-matcher = "0.3"
meval = "0.2.0"
notify = "7"
tokio = { version = "1", features = ["full"] }
dirs = "5"
open = "5"
log = "0.4"
env_logger = "0.11"
freedesktop-icons = "0.4"
tauri-plugin-fs = "2.4.5"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
zip = "0.6"
regex = "1"
